# ocaml-ffmpeg

./: .gitignore  .merlin  .ocamlformat  .travis.yml  CHANGES  Makefile.in  README  README.md  configure.ac  dune-project  ffmpeg-av.opam  ffmpeg-av.opam.template  ffmpeg-avcodec.opam  ffmpeg-avcodec.opam.template  ffmpeg-avdevice.opam  ffmpeg-avdevice.opam.template  ffmpeg-avfilter.opam  ffmpeg-avfilter.opam.template  ffmpeg-avutil.opam  ffmpeg-avutil.opam.template  ffmpeg-swresample.opam  ffmpeg-swresample.opam.template  ffmpeg-swscale.opam  ffmpeg-swscale.opam.template  ffmpeg.opam  index.html
.github/workflows/: ci.yml  doc.yml  main.yml  release.yml
av/: av.ml  av.mli  av_stubs.c  av_stubs.h  dune
av/config/: discover.ml
avcodec/: avcodec.ml  avcodec.mli  avcodec_stubs.c  avcodec_stubs.h  dune
avcodec/config/: discover.ml
avdevice/: avdevice.ml  avdevice.mli  avdevice_stubs.c  dune
avdevice/config/: discover.ml
avfilter/: avfilter.ml  avfilter.mli  avfilter_stubs.c  dune
avfilter/config/: discover.ml
avutil/: avutil.ml  avutil.mli  avutil_stubs.c  avutil_stubs.h  dune
avutil/config/: discover.ml
docs/: README.md  _config.yml
docs/api/: Av.Format.html  Av.html  Avcodec.Audio.html  Avcodec.Packet.html  Avcodec.Subtitle.html  Avcodec.Video.html  Avcodec.html  Avdevice.App_to_dev.html  Avdevice.Dev_to_app.html  Avdevice.html  Avutil.Channel_layout.html  Avutil.Log.html  Avutil.Pixel_format.html  Avutil.Sample_format.html  Avutil.Subtitle.html  Avutil.Time_format.html  Avutil.Video.html  Avutil.html  Channel_layout.html  Codec_id.html  Pixel_format.html  Sample_format.html  Swresample.AudioData.html  Swresample.Bytes.html  Swresample.DblBigArray.html  Swresample.DblBytes.html  Swresample.DblFrame.html  Swresample.DblPlanarBigArray.html  Swresample.DblPlanarBytes.html  Swresample.DblPlanarFrame.html  Swresample.FloatArray.html  Swresample.FltBigArray.html  Swresample.FltBytes.html  Swresample.FltFrame.html  Swresample.FltPlanarBigArray.html  Swresample.FltPlanarBytes.html  Swresample.FltPlanarFrame.html  Swresample.Frame.html  Swresample.Make.html  Swresample.PlanarFloatArray.html  (+104 more)
docs/html/: Av.Format.html  Avcodec.Audio.html  Avutil.Media_type.html  Avutil.Pixel_format.html  Avutil.Subtitle.html  Avutil.Video.html  Avutil.html  Swresample.Bytes.html  Swresample.CL.html  Swresample.DblFrame.html  Swresample.DblPlanarBytes.html  Swresample.DblPlanarFrame.html  Swresample.FloatArray.html  Swresample.FltBigArray.html  Swresample.FltPlanarBytes.html  Swresample.FltPlanarFrame.html  Swresample.Make.html  Swresample.PlanarFloatArray.html  Swresample.S16Bytes.html  Swresample.S16PlanarBigArray.html  Swresample.S16PlanarFrame.html  Swresample.S32Frame.html  Swresample.S32PlanarBytes.html  Swresample.S32PlanarFrame.html  Swresample.SF.html  Swresample.U8BigArray.html  Swresample.U8Bytes.html  Swresample.U8PlanarBigArray.html  Swresample.U8PlanarFrame.html  Swresample.html  Swscale.html  index.html  index_classes.html  index_extensions.html  index_methods.html  index_module_types.html  index_types.html  type_Avcodec.Audio.html  type_Avcodec.Subtitle.html  type_Avcodec.Video.html  (+25 more)
examples/: Makefile  all_bitstream_filters.ml  all_codecs.ml  aresample.ml  async_remuxing.ml  audio_decoding.ml  audio_device.ml  decode_audio.ml  decode_stream.ml  decoding.ml  demuxing_decoding.ml  dune  encode_audio.ml  encode_stream.ml  encode_video.ml  encoding.ml  filter_info.ml  fps.ml  fps_samplerate.ml  hw_encode.ml  hw_tests.ml  interrupt.ml  list_filters.ml  player.ml  read_metadata.ml  reenc_vp9.ml  remuxing.ml  subtitle_remux.ml  subtitle_transcode.ml  transcode_aac.ml  transcoding.ml  webcam.ml
examples/aresample/: Makefile  aresample.ml
examples/audio_decoding/: Makefile  audio_decoding.ml
examples/audio_device/: Makefile  audio_device.ml
examples/decode_audio/: Makefile  decode_audio.ml
examples/decode_stream/: Makefile  decode_stream.ml
examples/demuxing_decoding/: Makefile  demuxing_decoding.ml
examples/encode_audio/: Makefile  encode_audio.ml
examples/encode_stream/: Makefile  encode_stream.ml
examples/encode_video/: Makefile  bigarray_copy.ml  bigarray_scale.ml  bytes_copy.ml  bytes_scale.ml  encode_video.ml  planar_set.ml  set.ml  test_bench.ml  unsafe_wrap.ml  wrap.ml
examples/encoding/: Makefile  encoding.ml
examples/fps/: Makefile  fps.ml
examples/list_filters/: Makefile  list_filters.ml
examples/player/: Makefile  player.ml
examples/read_metadata/: Makefile  read_metadata.ml
examples/remuxing/: Makefile  remuxing.ml
examples/transcode_aac/: Makefile  OCamlMakefile  transcode_aac.ml
examples/transcoding/: Makefile  transcoding.ml
ffmpeg/: dune  index.html
ffmpeg-av/: index.html
ffmpeg-av/Av/: index.html
ffmpeg-avcodec/: index.html
ffmpeg-avcodec/Avcodec/: index.html
ffmpeg-avdevice/: index.html
ffmpeg-avfilter/: index.html
ffmpeg-avutil/: index.html
ffmpeg-swresample/: index.html
ffmpeg-swscale/: index.html
gen_code/: dune  gen_code.ml  gen_code_stubs.c
m4/: pkg_config.m4
opam/: ffmpeg-av.opam  ffmpeg-avcodec.opam  ffmpeg-avdevice.opam  ffmpeg-avfilter.opam  ffmpeg-avutil.opam  ffmpeg-avutil.opam.template  ffmpeg-swresample.opam  ffmpeg-swscale.opam  ffmpeg.opam
src/: META.in  Makefile.in  OCamlMakefile  av.ml  av.mli  av_stubs.c  av_stubs.h  avcodec.ml  avcodec.mli  avcodec_stubs.c  avcodec_stubs.h  avdevice.ml  avdevice.mli  avdevice_stubs.c  avfilter.ml  avfilter.mli  avfilter_stubs.c  avfilter_stubs.h  avutil.ml  avutil.mli  avutil_stubs.c  avutil_stubs.h  gen_code.ml  gen_codec_id.ml  swresample.ml  swresample.mli  swresample_stubs.c  swresample_stubs.h  swscale.ml  swscale.mli  swscale_stubs.c
swresample/: dune  swresample.ml  swresample.mli  swresample_stubs.c  swresample_stubs.h
swresample/config/: discover.ml
swscale/: dune  swscale.ml  swscale.mli  swscale_stubs.c
swscale/config/: discover.ml
test/: Makefile  dune  info.ml  resample.ml  swresample.ml  test.ml  test_info.ml  test_subtitle_read.ml  test_swresample.ml
test/fixtures/: sample.srt
tests/: test_invariant_avutil_stubs.c
(+102 files in other folders)
