opam-version: "1.2"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-ffmpeg"
build: [
  ["git" "submodule" "init"]
  ["git" "submodule" "update"]
  ["./bootstrap"]
  ["./configure" "--prefix" prefix]
  [make]
]
install: [
  [make "install"]
]
remove: ["ocamlfind" "remove" "ffmpeg"]
depends: [
  "ocamlfind" {build}
  "conf-pkg-config" {build}
  "base-bigarray"
]
depexts: [
  [["debian"] ["libavutil-dev" "libswscale-dev" "libavformat-dev"]]
  [["ubuntu"] ["libavutil-dev" "libswscale-dev" "libavformat-dev"]]
  [["alpine"] ["ffmpeg-dev"]]
  [["archlinux"] ["ffmpeg"]]
  [["centos"] ["ffmpeg-devel"]]
  [["fedora"] ["ffmpeg-devel"]]
  [["opensuse"] ["ffmpeg-devel"]]
  [["nixpkgs"] ["ffmpeg"]]
  [["osx" "homebrew"] ["ffmpeg"]]
]
bug-reports: "https://github.com/savonet/ocaml-ffmpeg/issues"
dev-repo: "https://github.com/savonet/ocaml-ffmpeg.git"
