opam-version: "2.0"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-ffmpeg"
bug-reports: "https://github.com/savonet/ocaml-ffmpeg/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "ocamlfind" {build}
  "conf-pkg-config" {build}
  "conf-autoconf" {build}
  "base-bigarray"
]
flags: light-uninstall
build: [
  ["git" "submodule" "init"]
  ["git" "submodule" "update"]
  ["./bootstrap"]
  ["./configure" "--prefix" prefix]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "ffmpeg"]
depexts: [
  [
    "libavutil-dev"
    "libswscale-dev"
    "libavformat-dev"
    "libavcodec-dev"
    "libavdevice-dev"
    "libswresample-dev"
  ] {os-distribution = "debian"}
  [
    "libavutil-dev"
    "libswscale-dev"
    "libavformat-dev"
    "libavcodec-dev"
    "libavdevice-dev"
    "libswresample-dev"
  ] {os-distribution = "ubuntu"}
  ["ffmpeg-dev"] {os-distribution = "alpine"}
  ["ffmpeg"] {os-distribution = "archlinux"}
  ["ffmpeg-devel"] {os-distribution = "centos"}
  ["ffmpeg-devel"] {os-distribution = "fedora"}
  ["ffmpeg-devel"] {os-distribution = "opensuse"}
  ["ffmpeg"] {os-distribution = "nixos"}
  ["ffmpeg"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-ffmpeg.git"
