opam-version: "2.0"
name: "ffmpeg"
version: "0.4.3"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-ffmpeg"
bug-reports: "https://github.com/savonet/ocaml-ffmpeg/issues"
synopsis:
  "Bindings for the ffmpeg library which provides functions for decoding audio and video files"
depends: [
  "ocaml" {>= "4.05.0"}
  "ocamlfind" {build}
  "conf-pkg-config" {build}
  "conf-autoconf" {dev & build}
  "base-bigarray"
  "base-threads"
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
depexts: [
  ["libavutil-dev" "libswscale-dev" "libavformat-dev" "libavcodec-dev" "libavdevice-dev" "libswresample-dev"]
    {os-distribution = "debian"}
  ["libavutil-dev" "libswscale-dev" "libavformat-dev" "libavcodec-dev" "libavdevice-dev" "libswresample-dev"]
    {os-distribution = "ubuntu"}
  ["ffmpeg-dev"] {os-distribution = "alpine"}
  ["ffmpeg"] {os-distribution = "arch"}
  ["ffmpeg-devel"] {os-distribution = "centos"}
  ["ffmpeg-devel"] {os-distribution = "fedora"}
  ["ffmpeg-devel"] {os-family = "suse"}
  ["ffmpeg"] {os-distribution = "nixos"}
  ["ffmpeg"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-ffmpeg.git"
