(library
 (name avcodec)
 (public_name ffmpeg-avcodec)
 (synopsis "Bindings to ffmpeg's avcodec library")
 (foreign_stubs
  (language c)
  (names avcodec_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp))
 (install_c_headers avcodec_stubs)
 (libraries ffmpeg-avutil))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))

(rule
 (targets hw_device_type_stubs.h)
 (action
  (run ../gen_code/gen_code.exe hw_device_type h)))

(rule
 (targets hw_device_type.ml)
 (deps hw_device_type_stubs.h)
 (action
  (run ../gen_code/gen_code.exe hw_device_type ml)))

(rule
 (targets hw_config_method_stubs.h)
 (action
  (run ../gen_code/gen_code.exe hw_config_method h)))

(rule
 (targets hw_config_method.ml)
 (deps hw_config_method_stubs.h)
 (action
  (run ../gen_code/gen_code.exe hw_config_method ml)))

(rule
 (targets codec_capabilities_stubs.h)
 (action
  (run ../gen_code/gen_code.exe codec_capabilities h)))

(rule
 (targets codec_capabilities.ml)
 (deps codec_capabilities_stubs.h)
 (action
  (run ../gen_code/gen_code.exe codec_capabilities ml)))

(rule
 (targets codec_id_stubs.h)
 (action
  (run ../gen_code/gen_code.exe codec_id h)))

(rule
 (targets codec_id.ml)
 (deps codec_id_stubs.h)
 (action
  (run ../gen_code/gen_code.exe codec_id ml)))
