(library
 (name avfilter)
 (public_name ffmpeg-avfilter)
 (synopsis "Bindings to ffmpeg's avfilter library")
 (foreign_stubs
  (language c)
  (names avfilter_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp))
 (libraries av))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
