(library
 (name swresample)
 (public_name ffmpeg-swresample)
 (synopsis "Bindings to ffmpeg's swresample library")
 (foreign_stubs
  (language c)
  (names swresample_stubs)
  (include_dirs
   (lib ffmpeg-avutil))
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp))
 (libraries ffmpeg-avutil ffmpeg-avcodec))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))

(rule
 (targets swresample_stubs.c)
 (mode fallback)
 (deps swresample_options_stubs.h)
 (action
  (echo "this should not happen")))

(rule
 (targets swresample_options_stubs.h)
 (action
  (run ../gen_code/gen_code.exe swresample_options h)))

(rule
 (targets swresample_options.ml)
 (action
  (run ../gen_code/gen_code.exe swresample_options ml)))
