(library
 (name swscale)
 (public_name ffmpeg-swscale)
 (synopsis "Bindings to ffmpeg's swscale library")
 (foreign_stubs
  (language c)
  (names swscale_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp))
 (libraries av))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
