(executable
 (name test)
 (libraries ffmpeg-av ffmpeg-swresample))

(rule
 (alias citest)
 (package ffmpeg)
 (deps
  (:all_codecs ../examples/all_codecs.exe)
  (:all_channel_layouts ../examples/all_channel_layouts.exe)
  (:all_bitstream_filters ../examples/all_bitstream_filters.exe)
  (:hw_encode ../examples/hw_encode.exe)
  (:list_filters ../examples/list_filters.exe)
  (:encode_audio ../examples/encode_audio.exe)
  (:encode_video ../examples/encode_video.exe)
  (:encode_stream ../examples/encode_stream.exe)
  (:encoding ../examples/encoding.exe)
  (:decode_stream ../examples/decode_stream.exe)
  (:audio_decoding ../examples/audio_decoding.exe)
  (:remuxing ../examples/remuxing.exe)
  (:transcode_aac ../examples/transcode_aac.exe)
  (:transcoding ../examples/transcoding.exe)
  (:decoding ../examples/decoding.exe)
  (:fps ../examples/fps.exe)
  (:aresample ../examples/aresample.exe)
  (:demuxing_decoding ../examples/demuxing_decoding.exe)
  (:read_metadata ../examples/read_metadata.exe)
  (:interrupt ../examples/interrupt.exe)
  (:test test.exe))
 (action
  (progn
   (run %{list_filters})
   (run %{all_codecs})
   (run %{all_channel_layouts})
   (run %{all_bitstream_filters})
   (run %{hw_encode} nvenc.mp4 h264_nvenc device)
   (run %{hw_encode} nvenc.mp4 h264_nvenc frame)
   (run %{encode_audio} A4.flac flac)
   (run %{encode_audio} A4.mp2 mp2)
   (run %{encode_video} video.ogg yuv420p libtheora)
   (run %{encode_video} video.webm yuva420p libvpx-vp9)
   (run %{encode_stream} S4.flac flac)
   (run %{encode_stream} S4.mp2 mp2)
   (run %{encoding} out.mkv aac mpeg4 ass)
   (run %{decode_stream} A4.flac A4.mp3 libmp3lame)
   (run %{decode_stream} A4.mp2 A4.ogg libvorbis)
   (run %{audio_decoding} A4.ogg ogg A4)
   (run %{audio_decoding} out.mkv matroska out)
   (run %{remuxing} out.mkv out.mp4)
   (run %{transcode_aac} A4.ogg A4.mp4 %{system})
   (run %{transcoding} out.mkv out.mp4)
   (run %{decoding} out.mkv)
   (run %{fps} out.mkv out.mp4)
   (run %{aresample} out.mkv out.mp4)
   (run %{demuxing_decoding} out.mkv vo.raw ao.raw)
   (run %{read_metadata} A4.flac flac A4.mp3 libmp3lame)
   (run %{read_metadata} A4.mp2 mp2 A4.ogg libvorbis)
   (run %{interrupt})
   (run %{test}))))
